--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -253,17 +253,130 @@ select {
 
 .grid-box {
     padding: 48% 1rem 8% 1rem;
+    @include transition(500ms);
+    overflow: hidden;
+
+    .background-image {
+        @include transition(500ms);
+
+        @include before {
+            @include responsive(xs-sm) {
+                background: #000 !important;
+                opacity: 0.5 !important;
+                @include transition(300ms);
+            }
+        }
+    }
+
+    .heading-box,
+    .button-box {
+        z-index: 2;
+    }
+
+    .link {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 2;
+    }
+
+    .grid-inner {
+        @include responsive(xs-sm) {
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            padding: 2rem;
+
+            h2 {
+                margin-bottom: 0;
+                border-bottom: 2px solid var(--accent-color);
+                display: inline;
+                line-height: 2;
+            }
+        }
+
+        @include responsive(md-lg) {
+            @include before-after {
+                content: "";
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                width: 0;
+                background: rgba(0, 0, 0, 0.2);
+                z-index: 1;
+            }
+
+            @include before {
+                @include transition(500ms);
+                left: 0;
+            }
+
+            @include after {
+                @include transition(500ms);
+                right: 0;
+            }
+        }
+    }
+
+    @include responsive(xs-sm) {
+        padding: 50%;
+    }
+
+    @include on-event {
+        .grid-inner {
+            @include before-after {
+                width: 100%;
+            }
+
+            .background-image {
+                @include before {
+                    @include responsive(xs-sm) {
+                        opacity: 0.65 !important;
+                    }
+                }
+            }
+        }
+    }
 }
+
 .image-info-box {
     max-width: 300px;
     margin-left: auto;
     margin-right: auto;
+
     .top-icon {
-        @includer respond-to(md-lg) {
+        @include responsive(md-lg) {
             max-width: 35px;
         }
     }
+
+    .main-image {
+        position: relative;
+        padding: 20%;
+        margin-bottom: 1.875rem;
+
+        img,
+        svg {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+
+    &.small-image {
+        .main-image {
+            padding: 12%;
+        }
+    }
 }
+
 
 .mySwiper-Testimonial {
     .swiper-slide {
