--- a/assets/stylesheets/base/_helpers.scss
+++ b/assets/stylesheets/base/_helpers.scss
@@ -136,6 +136,7 @@
 
 .background-image {
 	@include absolute-corner;
+	position: absolute !important;
 	> img {
 		object-fit: cover;
 		width: 100%;
