--- a/style.css
+++ b/style.css
@@ -10403,7 +10403,8 @@ select {
   left: 0;
   top: 0;
   right: 0;
-  bottom: 0; }
+  bottom: 0;
+  position: absolute !important; }
   .background-image > img {
     object-fit: cover;
     width: 100%;
