--- a/style.css
+++ b/style.css
@@ -9753,6 +9753,54 @@ p:last-child {
 a {
   text-decoration: none; }
 
+.wpcf7-submit {
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-transition: 300ms;
+  -moz-transition: 300ms;
+  -ms-transition: 300ms;
+  -o-transition: 300ms;
+  transition: 300ms;
+  border-radius: 5px;
+  font-weight: 500;
+  text-decoration: none;
+  color: inherit;
+  background-color: transparent;
+  text-align: center;
+  position: relative;
+  background-color: var(--accent-color);
+  color: var(--white-color); }
+  .wpcf7-submit span {
+    position: relative;
+    z-index: 1; }
+    .wpcf7-submit span:not(:last-child) {
+      margin-right: 0.75rem; }
+    .wpcf7-submit span.icon {
+      margin-top: -3px; }
+  .wpcf7-submit:not(.nav-link) {
+    border: 2px solid transparent;
+    padding: 10px 1.5rem; }
+  .wpcf7-submit.nav-link {
+    padding: 10px 1.5rem;
+    border: 1px solid transparent; }
+  @media screen and (min-width: 992px) {
+    .wpcf7-submit {
+      white-space: nowrap; } }
+  @media screen and (max-width: 767px) {
+    .wpcf7-submit {
+      padding: 1rem 1.5rem; } }
+  .wpcf7-submit:hover, .wpcf7-submit:active, .wpcf7-submit:focus {
+    background-color: var(--secondary-color); }
+
 .button-box.button-box > a, .button-box.button-box > span:not(.wpcf7-spinner), .button-box.button-box > button, .button-box.button-box > input[type='submit'] {
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
@@ -10174,11 +10222,20 @@ textarea {
     .title-container {
       padding: 2rem; } }
 
-.fieldset-cf7mls-wrapper label {
+.fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper label {
   display: inline-flex;
   flex-direction: column; }
-  .fieldset-cf7mls-wrapper label input, .fieldset-cf7mls-wrapper label select {
+  .fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper label input,
+  .fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper label select {
     width: 100%; }
+.fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .cf7mls-btns {
+  text-emphasis: center; }
+  .fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .cf7mls-btns .cf7mls_back {
+    float: none;
+    padding: 0;
+    background-color: transparent;
+    color: #c6c9ce;
+    font-size: 17px; }
 
 @font-face {
   font-family: "Outfit";
