--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -565,6 +565,8 @@ textarea {
         flex-direction: column;
         width: 100%;
         font-size: 17px;
+        text-align: left;
+        font-weight: 500;
         .wpcf7-form-control-wrap {
             margin-top: 14px;
         }
