--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -608,7 +608,7 @@ textarea {
 }
 
 .form-section {
-    .fields-holder {
+    .fields-holder, .cf7mls-btns {
         max-width: 385px;
         margin-left: auto;
         margin-right: auto;
