--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -598,6 +598,7 @@ textarea {
             border-color: var(--secondary-color);
             background-color: var(--secondary-color);
             color: var(--white-color);
+            border: 2px solid var(--secondary-color);
             width: 100%;
             @include on-event {
                 background-color: var(--white-color) !important;
