--- a/style.css
+++ b/style.css
@@ -10227,6 +10227,7 @@ textarea {
     border-color: var(--secondary-color);
     background-color: var(--secondary-color);
     color: var(--white-color);
+    border: 2px solid var(--secondary-color);
     width: 100%; }
     .fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .cf7mls-btns .cf7mls_next span {
       position: relative;
