--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -583,7 +583,7 @@ textarea {
     }
     .wpcf7-submit {
         width: 100%;
-        margin-bottom: 0;
+        margin-bottom: 0 !important;
     }
     .cf7mls-btns {
         text-emphasis: center;
