--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -644,7 +644,7 @@ textarea {
 .form-progress {
     background-color: #f3f3f3;
     height: 7px;
-    .form-progress {
+    .progress-holder {
         background-color: var(--secondary-color);
         width: var(--progress-width);
         transition: 500ms;
