--- a/style.css
+++ b/style.css
@@ -10278,7 +10278,7 @@ textarea {
 .form-progress {
   background-color: #f3f3f3;
   height: 7px; }
-  .form-progress .form-progress {
+  .form-progress .progress-holder {
     background-color: var(--secondary-color);
     width: var(--progress-width);
     transition: 500ms; }
