--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -648,5 +648,6 @@ textarea {
         background-color: var(--secondary-color);
         width: var(--progress-width);
         transition: 500ms;
+        height: 100%;
     }
 }
